# face-reidentification

./: .gitignore  README.md  Updates.md  commands.md  download.sh  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  roi_zoom.py  tiling.py  tracker.py
database/: __init__.py  face_db.py
docs/: README.md  installation.md  models.md  overview.md  usage.md
docs/api/: README.md  database.md  face_detection.md  face_recognition.md  utilities.md
models/: __init__.py  arcface.py  scrfd.py
utils/: helpers.py  logging.py
