[project]
name = "cloned-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "motpy>=0.0.10",
    "numpy>=2.2.6",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
